<resources>
    <string name="app_name">Hangman</string>
    <string name="start_game">START GAME</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="game_name">Hangman</string>
    <string name="gameModeSelect">Select game mode:</string>
    <string name="relaxMode">Relax</string>
    <string name="timeMode">Time Runner</string>
    <string name="soundSettings">Music</string>
    <string name="Off" translatable="false">Off</string>
    <string name="On" translatable="false">On</string>
    <string name="squirrel">squirrel</string>
    <string name="animals">animals</string>
    <string name="tiger">tiger</string>
    <string name="eagle">eagle</string>
    <string name="flamingo">flamingo</string>
    <string name="elephant" >elephant</string>
    <string name="penguin" >penguin</string>
    <string name="fox" >fox</string>
    <string name="whale" >whale</string>
    <string name="hamster" >hamster</string>
    <string name="gorilla">gorilla</string>
    <string name="hyena" >hyena</string>
    <string name="shark" >shark</string>
    <string name="hedgehog" >hedgehog</string>
    <string name="jellyfish" >jellyfish</string>
    <string name="kangaroo" >kangaroo</string>
    <string name="geography">geography</string>
    <string name="poland" >Poland</string>
    <string name="france" >France</string>
    <string name="germany" >Germany</string>
    <string name="russia" >Russia</string>
    <string name="spain" >Spain</string>
    <string name="italy" >Italy</string>
    <string name="ukraine" >Ukraine</string>
    <string name="australia" >Australia</string>
    <string name="asia" >Asia</string>
    <string name="greenland" >Greenland</string>
    <string name="canada" >Canada</string>
    <string name="slovakia" >Slovakia</string>
    <string name="portugal" >Portugal</string>
    <string name="iceland" >Iceland</string>
    <string name="apple" >apple</string>
    <string name="sausage" >sausage</string>
    <string name="pear" >pear</string>
    <string name="lemon" >lemon</string>
    <string name="pizza" >pizza</string>
    <string name="carrot" >carrot</string>
    <string name="banana" >banan</string>
    <string name="orange" >orange</string>
    <string name="grapefruit" >grapefruit</string>
    <string name="tomato" >tomato</string>
    <string name="cucumber" >cucumber</string>
    <string name="mandarine" >mandarine</string>
    <string name="categoryChooseMsg">Shake the device "\n" to choose category</string>
    <string name="newCategory">New category</string>
    <string name="ANIMALS">ANIMALS</string>
    <string name="FOOD">FOOD</string>
    <string name="GEOGRAPHY">GEOGRAPHY</string>
    <string name="HISTORY">HISTORY</string>
    <string name="ALL">ALL</string>
    <string name="winner">You won!</string>
    <string name="looser">You lost!</string>
    <string name="singleGame">1 player</string>
    <string name="duelGame">2 players</string>
    <string name="nextWord">next word</string>
    <string name="menu">MENU</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="your_word">Your word</string>
    <string name="wordsNumber">Rounds number</string>
    <string name="reset" translatable="false">Reset round</string>
    <string name="save">save</string>
    <string name="Field_cannot_be_empty">Field cannot be empty</string>
    <string name="gameDescription">Gra polega na odgadywaniu słów. Na planszy mamy ukryte słowo (losowe w trybie 1-osobowym lub wpisywane przez przeciwnika w trybie 2-osobowym). Każda litera zamieniona jest znakiem \'-\'. Poniżej umieszczona jest klawiatura zawierająca wszystkie litery alfabetu. Gracz wybiera dowolną literę. Jeśli litera znajduje się w odgadywanym słowie, w haśle zostaną odsłonięte wszystkie wystąpienia tej litery. Każdą literę można zaznaczyć tylko raz. Jeśli nie trafimy, stopniowo zaczyna rysować się wisielec. W każdym haśle możemy popełnić 6 błędów. Jeśli popełnimy kolejny błąd, rozgrywka skończy się.</string>
    <string name="sobieski">sobieski</string>
    <string name="chrobry">chrobry</string>
    <string name="wawel">wawel</string>
    <string name="knight">knight</string>
    <string name="sabre">sabre</string>
    <string name="sword">sword</string>
    <string name="jagiełło">jagiełło</string>
    <string name="wizna">wizna</string>
    <string name="piłsudski">piłsudski</string>
    <string name="grunwald">grunwald</string>
    <string name="crusaders">crusaders</string>
    <string name="crusade">crusade</string>
    <string name="kościuszko">kościuszko</string>
    <string name="hussar" >hussar</string>
    <string name="deluge">deluge</string>

</resources>
