<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:scaleX="0.8"
        android:scaleY="1.5"
        android:src="@drawable/text_background">

    </ImageView>

    <com.example.eweli.sm_projekt.LetterTextView
        android:id="@+id/startGame"
        style="@style/MenuTheme"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/start_game" />

    <com.example.eweli.sm_projekt.LetterTextView
        android:id="@+id/settings"
        style="@style/MenuTheme"
        android:layout_below="@+id/startGame"
        android:text="@string/settings" />

    <com.example.eweli.sm_projekt.LetterTextView
        android:id="@+id/about"
        style="@style/MenuTheme"
        android:layout_below="@+id/settings"
        android:text="@string/about" />


    <com.example.eweli.sm_projekt.LetterTextView
        android:id="@+id/exit"
        style="@style/MenuTheme"
        android:layout_below="@+id/about"
        android:text="@string/exit" />



</RelativeLayout>