<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/text_background">



    <com.example.eweli.sm_projekt.LetterTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameModeSelect"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:letterSpacing="0.2"
        android:textSize="20sp"
        android:textAllCaps="true"/>

    <com.example.eweli.sm_projekt.LetterTextView
        android:id="@+id/singleGameMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/singleGame"

        />

    <com.example.eweli.sm_projekt.LetterTextView
        android:id="@+id/duetGameMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/duelGame"

        />





</LinearLayout>